obtener detalle ordenes segun estado
