# controllers/detalleOrden.controller.js
@@ -1,11 +1,15 @@
 import { request, response } from "express";
 import { matchedData } from "express-validator";
 
-import rolService from "../services/local.service.js";
+import detalleOrdenService from "../services/detalleOrden.service.js";
 
-const getAll = async (req = request, res = response, next) => {
+//? obtener ordenes recibidas
+const getAllOrdenReceived = async (req = request, res = response, next) => {
+  //! obtener estado "Recibido"
+  const id = 1;
+
   try {
-    const data = await rolService.getAll();
+    const data = await detalleOrdenService.getAllOrdenByStatusId(Number(id));
     res.status(200).json({
       success: true,
       payload: data,
@@ -16,11 +20,13 @@ const getAll = async (req = request, res = response, next) => {
   }
 };
 
-const getById = async (req = request, res = response, next) => {
-  const { id } = matchedData(req);
+//? obtener ordenes en proceso
+const getAllOrdenInProcess = async (req = request, res = response, next) => {
+  //! obtener estado en "Proceso"
+  const id = 2;
 
   try {
-    const data = await rolService.getById(id);
+    const data = await detalleOrdenService.getAllOrdenByStatusId(Number(id));
     res.status(200).json({
       success: true,
       payload: data,
@@ -30,13 +36,32 @@ const getById = async (req = request, res = response, next) => {
     next(err);
   }
 };
+
+//? obtener ordenes concluidas
+const getAllCompletedOrden = async (req = request, res = response, next) => {
+  //! obtener estado "concluidas" - cambiar nombre desde el servicio
+  const id = 3;
+
+  try {
+    const data = await detalleOrdenService.getAllOrdenByStatusId(Number(id));
+    res.status(200).json({
+      success: true,
+      payload: data,
+      message: "Operación Exitosa",
+    });
+  } catch (err) {
+    next(err);
+  }
+};
+
+//! Cambiar estado de las ordenes
 
 const create = async (req = request, res = response, next) => {
   let body = matchedData(req);
   if (!body.descripcion) delete body.descripcion;
 
   try {
-    const data = await rolService.create(body);
+    const data = await detalleOrdenService.create(body);
     res.status(201).json({
       success: true,
       payload: data,
@@ -47,34 +72,9 @@ const create = async (req = request, res = response, next) => {
   }
 };
 
-const update = async (req = request, res = response, next) => {
-  const { id } = matchedData(req);
-  const { body } = req;
-
-  try {
-    const data = await rolService.update(id, body);
-    res.status(200).json({
-      success: true,
-      payload: data,
-      message: "Local Actualizado con Éxito",
-    });
-  } catch (err) {
-    next(err);
-  }
+export {
+  getAllOrdenReceived,
+  getAllOrdenInProcess,
+  getAllCompletedOrden,
+  create,
 };
-
-const _delete = async (req = request, res = response, next) => {
-  const { id } = matchedData(req);
-
-  try {
-    await rolService.delete(id);
-    res.status(200).json({
-      success: true,
-      message: "Local Eliminado con Éxito",
-    });
-  } catch (err) {
-    next(err);
-  }
-};
-
-export { getAll, getById, create, update, _delete };
